@@ -73,8 +73,8 @@ char *infotext[] =
 	 "The following people currently compose the bahamut team and",
      "actively maintain the bahamut codebase:",
 	 "epiphani            Aaron Wiebe         epiphani@dal.net",
-	 "Raistlin_Majere     Jason Slagle        raistlin@bahamut.net",
      "sedition            David Parton        sedition@dal.net",
+     "Quension            Trevor Talbot       quension@dal.net",
 	 "",
 	 "The following people have contributed code or support",
 	 "to the bahamut team:",
@@ -82,9 +82,9 @@ char *infotext[] =
 	 "Dakal               David Knepper       dakal@dal.net",
 	 "Dalvenjah           Sven Nielsen        dalvenjah@dal.net",
 	 "MSofty              Mark Salerno        msofty@dal.net",
+     "Raistlin_Majere     Jason Slagle        raistlin@bahamut.net",
 	 "Rakarra             Ian Westcott        rakarra@dal.net",
      "lucas               Lucas Madar         lucas@dal.net",
-     "Quension            Trevor Talbot       quension@mac.com",
 	 "srd                 Sean McKay          srd@powertrip.net",
 	 "White_Dragon        Chip Norkus         wd@dal.net",
      "xPsycho             Ryan Smith          xpsycho@dal.net",
